cropper stroke ui fixes

--- a/client/src/app/components/plant-details-dialog/plant-details-dialog.component.scss
+++ b/client/src/app/components/plant-details-dialog/plant-details-dialog.component.scss
@@ -11,6 +11,10 @@
     height: 100%;
 }
 
+.cropping {
+    color: green;
+}
+
 .plant-details-dialog {
     .info-icon {
         top: 0.25rem;
@@ -56,7 +60,7 @@
                 tr {
                     margin-bottom: 0.5rem;
                     td {
-                        border-left: 2px solid $color-light-gray;
+                        border-left: 1px solid $color-light-gray;
                         padding-left: 1rem;
                     }
                 }
@@ -66,6 +70,7 @@
     .plant-details-container {
         padding-top: 1rem;
         font-size: 1.25rem;
+        height: 144px;
         .highlight {
             color: $color-red;
         }
